# edit_breakdown

./: .gitignore  CHANGELOG.md  README.md  __init__.py  blender_manifest.toml  data.py  draw_utils.py  ops.py  panels.py  pyproject.toml  requirements.txt  tools.py  utils.py  view.py
ops/: __init__.py  scene.py  shot.py  sync.py
ui/: __init__.py  draw_utils.py  panels.py  thumbnail_grid.py
