[tool.poetry]
name = "edit_breakdown"
version = "0.1.0"
description = "Blender tool to get insight on the complexity of an edit."
authors = ["Inês Almeida <britalmeida@gmail.com>, Francesco Siddi <francesco.siddi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"fake-bpy-module-2.92" = "^20210304"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}

[tool.black]
line-length = 100
target_version = ['py38']
skip_string_normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
